--- a/dapp/src/components/LogoutButton/styles.scss
+++ b/dapp/src/components/LogoutButton/styles.scss
@@ -2,6 +2,7 @@
 
 .logout-button-holder {
     height: 100%;
+    margin-left: 5px;
 
     .logout-button {
         color: $white;
